--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www.ts"
+    "start": "ts-node bin/www.ts"
   },
   "dependencies": {
+    "activedirectory2": "^2.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "joi": "^17.4.0",
+    "morgan": "~1.9.1",
+    "ts-node": "^10.0.0",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/joi": "^17.2.3",
     "@types/node": "^15.12.4",
     "typescript": "^4.3.4"
   }
