--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "express": "~4.16.1",
     "joi": "^17.4.0",
     "morgan": "~1.9.1",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.6.4",
+    "sequelize-typescript": "^2.1.0",
+    "sqlite3": "^5.0.2",
     "ts-node": "^10.0.0",
     "yaml": "^1.10.2"
   },
@@ -19,6 +23,8 @@
     "@types/express": "^4.17.12",
     "@types/joi": "^17.2.3",
     "@types/node": "^15.12.4",
+    "@types/sequelize": "^4.28.9",
+    "sequelize-cli": "^6.2.0",
     "typescript": "^4.3.4"
   }
 }
